2011-09-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1914/cpukit
	* rtems/score/cpu.h: Select timestamp implementation.

2011-08-30	Peter Dufault <dufault@hda.com>

	* rtems/score/cpu.h: Add more context access functionality.  Needed to
	get GDB debugger hooks working.

2011-08-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Renamed defines XER in PPC_XER, LR in
	PPC_LR, CTR in PPC_CTR, PVR in PPC_PVR, RPA in PPC_RPA, DAR in
	PPC_DAR, DEC in PPC_DEC, and EAR in PPC_EAR.

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Added SPE support to CPU context.

2011-05-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Reformat.

2011-05-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added FSL_EIS_SVR define.

2011-02-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added FSL_EIS_ATBL, FSL_EIS_ATBL, and
	FSL_EIS_SPEFSCR defines.

2011-02-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added MSR_UCLE, MSR_SPE, MSR_WE, and
	MSR_UBLE defines.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/powerpc/registers.h, rtems/score/cpu.h:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-01-31	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Changed Freescale EIS prefix.  More
	Freescale EIS defines.  Added MSR_IS, MSR_DS, and MSR_PMM defines.

2011-01-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added BOOKE_PIR define.

2010-10-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/powerpc/registers.h: Added HID2 define.  Fixed comments.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Add RTEMS_COMPILER_NO_RETURN_ATTRIBUTE to
	_CPU_Context_restore() because it does not return. Telling GCC this